# infra-metrics-insight-renderer

./: .gitignore  CONTRIBUTING.md  README.md  REUSE.toml  SECURITY.md  WORKFLOW.md  codecov.yml  deny.toml  rust-toolchain.toml
.cargo/: audit.toml
.github/: CODEOWNERS  codecov.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/render-profile/: action.yml
.github/actions/render-repository/: action.yml
.github/actions/setup-imir/: action.yml
.github/workflows/: auto-release-imir.yml  badge-sync.yml  build-imir.yml  ci.yml  dependabot-auto-merge.yml  release.yml  render-all.yml  render-infra-metrics-insight-renderer.yml  render-masterror.yml  render-metrics.yml  render-open-source.yml  render-profile.yml  render-repository.yml  render-telegram-webapp-sdk.yml  sync-targets.yml
.reuse/: dep5
assets/badges/: imir-badge-simple-private.svg.license
imir/: .rustfmt.toml  CONFIGURATION.md  Cargo.lock.license  Cargo.toml  PERFORMANCE.md  README.md  TROUBLESHOOTING.md  deny.toml
imir/.config/: nextest.toml
imir/benches/: benchmarks.rs
imir/examples/: README.md  full-featured.yaml  minimal.yaml  multi-repo.yaml
imir/src/: artifact.rs  badge.rs  config.rs  contributors.rs  discover.rs  error.rs  file.rs  gh.rs  git.rs  lib.rs  main.rs  normalizer.rs  open_source.rs  readme.rs  render.rs  retry.rs  slug.rs  slugs.rs  svg.rs  sync.rs
metrics/: infra-metrics-insight-renderer.json  infra-metrics-insight-renderer.json.license  masterror.json  profile.json  telegram-webapp-sdk.json
metrics-orchestrator/: Cargo.toml
metrics-orchestrator/src/: config.rs  error.rs  lib.rs  main.rs  normalizer.rs  open_source.rs  slug.rs
scripts/: ci-check.sh  prepare-metrics-image.sh
targets/: targets.yaml
