[package]
name = "imir"
version = "0.1.0"
edition = "2021"
description = "Generate rendering instructions for lowlighter/metrics targets"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
masterror = "0.24"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.13"
