# SPDX-FileCopyrightText: 2025 RAprogramm <andrey.rozanov.vl@gmail.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "imir"
version = "0.1.22"
edition = "2024"
description = "Generate rendering instructions for lowlighter/metrics targets"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
masterror = "0.26"
octocrab = "0.49"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.18"
rayon = "1.10"
regex = "1.12"

[dev-dependencies]
proptest = "1.9"
tempfile = "3.13"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
