# SPDX-FileCopyrightText: 2025-2026 RAprogramm <andrey.rozanov.vl@gmail.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "imir"
version = "0.1.23"
edition = "2024"
description = "Generate rendering instructions for lowlighter/metrics targets"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
masterror = "0.27"
octocrab = "0.51"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.18"
rayon = "1"
regex = "1"

[dev-dependencies]
proptest = "1"
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
